update log
